Temporarily remove code dealing with ChoiceTasks